Cleans YAML file to be usable with Psych

--- a/lib/exchanges/svf/isa-8550.yml
+++ b/lib/exchanges/svf/isa-8550.yml
@@ -1,3 +1,4 @@
+---
 root:
   - version: 1
   - folder: 1
@@ -71,11 +72,11 @@ lines:
       - journal_entries_count: integer-11
       - currency: string-3
     children:
-      - activities: analytic_activities-*
-      - accounts: *
+      - activities: 'analytic_activities-*'
+      - accounts: "*"
       - taxes: "tax-*"
-      - journals: *
-      - entries: *
+      - journals: "*"
+      - entries: "*"
 
   analytic_activity:
     key: "ANA   "
@@ -180,8 +181,8 @@ lines:
       - cycle: integer-11
     children:
       - remark: '?'
-      - analytic_accounts: *
-      - thirds: *
+      - analytic_accounts: "*"
+      - thirds: "*"
 
   remark:
     key: "RMQDEB"
@@ -279,7 +280,7 @@ lines:
 
   entry:
     key: "ECR   "
-    occurrence: *
+    occurrence: "*"
     cells:
       - journal: string-2
       - printed_on: date
@@ -330,8 +331,8 @@ lines:
       - expirable: boolean
       - declared_on: date
     children:
-      - analytic_lines: *
-      - expirations: *
+      - analytic_lines: "*"
+      - expirations: "*"
 
   analytic_line:
     key: "ANAMVT"
