--- a/installer/debian/debian/control
+++ b/installer/debian/debian/control
@@ -8,11 +8,11 @@ Homepage: http://www.ekylibre.org
 
 Package: ekylibre
 Architecture: all
-Depends: ruby1.8 (>=1.8.7), rubygems (>=1.3.7), ruby-dev (>=1.8.7), rake (>=0.8.7), rake (<<0.9), libxml2-dev, libpq-dev, apache2 (>=2.2.4), libapache2-mod-passenger, postgresql (>=8.3), zlib1g-dev
+Depends: ruby (>=1.8.7), rubygems, apache2 (>=2.2.4), apache2-prefork-dev, libcurl4-openssl-dev, libopenssl-ruby, build-essential, postgresql (>=8.3), ruby-dev, zlib1g-dev, libxml2-dev, libpq-dev
 Recommends: ruby (>=1.8.7)
 Suggests: ttf-liberation
-Description: simple ERP for little businesses
+Description: Simple ERP for little businesses
  Ekylibre is a simple ERP for little businesses. Ekylibre can manage companies,
- users, rights, CRM, general accounting, sales, pruchases, stocks and 
+ users, rights, CRM, general accounting, sales, purchases, stocks and 
  production. 
  It's aimed to be simple but all-in-one for little enterprises.
