--- a/test/fixtures/sale_lines.yml
+++ b/test/fixtures/sale_lines.yml
@@ -139,3 +139,19 @@ sale_lines_005:
   sale_id: 4
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
+
+sale_lines_006:
+  amount: 100
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 6
+  pretax_amount: 100
+  price_id: 1
+  product_id: 3
+  quantity: 15
+  reduction_percent: 0
+  sale_id: 5
+  unit_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
