--- a/test/fixtures/asset_depreciations.yml
+++ b/test/fixtures/asset_depreciations.yml
@@ -56,12 +56,30 @@
 #   updater_id: 1
 #
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+asset_depreciations_001:
+  accountable: true
+  amount: 0
+  asset_id: 1
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  created_on: 2009-07-19
+  creator_id: 1
+  id: 1
+  started_on: 2009-07-19
+  stopped_on: 2009-07-19
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+asset_depreciations_002:
+  accountable: true
+  amount: 0
+  asset_id: 2
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  created_on: 2009-07-19
+  creator_id: 1
+  id: 2
+  started_on: 2009-07-19
+  stopped_on: 2009-07-19
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
