--- a/config/currencies.yml
+++ b/config/currencies.yml
@@ -1,11 +1,28 @@
 # Codes come from ISO4217
 # This file defines all used currencies defined by the ISO
+# Last update: 2012-03-07
 currencies:
-  eur:
+  EUR:
     cash: [0.01, 0.02, 0.05, 0.1, 0.2, 0.5, 1, 2, 5, 10, 20, 50, 100, 200, 500]
     countries: [ad, at, be, cy, de, ee, es, fi, fr, gr, ie, it, lu, mc, me, mt, nl, pt, si, sk, sm, va]
     name: 'Euro'
     symbol: '€'
-    number: 978
+    number: "978"
+    scale: 2
+    active: true
+  FRF:
+    cash: [0.05, 0.1, 0.2, 0.5, 1, 2, 5, 10, 20, 50, 100, 200, 500]
+    countries: [fr]
+    name: 'Franc'
+    symbol: 'F'
+    number: "250"
+    scale: 2
+    active: false
+  USD:
+    cash: [0.01, 0.05, 0.1, 0.25, 0.5, 1, 2, 5, 10, 20, 50, 100]
+    countries: [ec, gt, us]
+    name: 'US Dollar'
+    symbol: '$'
+    number: "840"
     scale: 2
     active: true
