Adds PurchaseNature model in order to specify parameters for purchases

--- a/config/menus.yml
+++ b/config/menus.yml
@@ -646,6 +646,14 @@ menus:
         - "sale_natures::new"
         - "sale_natures::show"
         - "sale_natures::update"
+      - - "purchase_natures::index"
+        - "purchase_natures::create"
+        - "purchase_natures::destroy"
+        - "purchase_natures::edit"
+        - "purchase_natures::list"
+        - "purchase_natures::new"
+        - "purchase_natures::show"
+        - "purchase_natures::update"
       - - "delays::index"
         - "delays::create"
         - "delays::destroy"
