--- a/test/fixtures/purchases.yml
+++ b/test/fixtures/purchases.yml
@@ -70,6 +70,7 @@ purchases_001:
   creator_id: 1
   id: 1
   number: "P000001"
+  nature_id: 1
   planned_on: 2009-08-20
   state: "draft"
   supplier_id: 1
@@ -84,6 +85,7 @@ purchases_002:
   creator_id: 1
   id: 2
   number: "P000002"
+  nature_id: 1
   state: "draft"
   supplier_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
@@ -93,6 +95,7 @@ purchases_003:
   amount: 0
   pretax_amount: 0
   company_id: 1
+  nature_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 3
@@ -107,6 +110,7 @@ purchases_004:
   pretax_amount: 0
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
+  nature_id: 1
   creator_id: 1
   id: 4
   number: "P000004"
@@ -126,6 +130,7 @@ purchases_005:
   number: "P000005"
   planned_on: 2009-08-20
   state: "order"
+  nature_id: 1
   supplier_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
