--- a/test/fixtures/cashes.yml
+++ b/test/fixtures/cashes.yml
@@ -68,7 +68,7 @@ cashes_001:
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  currency_id: 1
+  currency: 'EUR'
   by_default: true
   iban: "FR7611111222223333333333391"
   iban_label: "FR76 1111 1222 2233 3333 3333 391"
@@ -84,7 +84,7 @@ cashes_002:
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  currency_id: 1
+  currency: 'EUR'
   by_default: false
   iban: "FR76"
   iban_label: "FR76"
@@ -101,7 +101,7 @@ cashes_003:
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  currency_id: 1
+  currency: 'EUR'
   by_default: false
   id: 3
   journal_id: 1
