--- a/test/fixtures/financial_years.yml
+++ b/test/fixtures/financial_years.yml
@@ -52,6 +52,7 @@
 financial_years_001:
   closed: false
   code: "Loremum"
+  currency: 'EUR'
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -64,6 +65,7 @@ financial_years_001:
 financial_years_002:
   closed: false
   code: "Loremum2"
+  currency: 'EUR'
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
