--- a/test/fixtures/journal_entries.yml
+++ b/test/fixtures/journal_entries.yml
@@ -71,15 +71,18 @@ journal_entries_001:
   created_on: 2007-07-22
   creator_id: 1
   credit: 0
+  original_credit: 0
+  original_debit: 0
   debit: 0
+  financial_year_id: 1
   id: 1
   journal_id: 1
   number: "XYZ0001"
   printed_on: 2007-07-20
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  currency_id: 1
-  currency_rate: 1
+  original_currency: 'EUR'
+  original_currency_rate: 1
   state: draft
 
 journal_entries_002:
@@ -87,6 +90,9 @@ journal_entries_002:
   created_at: 2009-07-19 19:13:59 +02:00
   created_on: 2009-07-19
   creator_id: 1
+  financial_year_id: 1
+  original_credit: 0
+  original_debit: 0
   credit: 0
   debit: 0
   id: 2
@@ -95,8 +101,8 @@ journal_entries_002:
   printed_on: 2007-07-25
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  currency_id: 1
-  currency_rate: 1
+  original_currency: 'EUR'
+  original_currency_rate: 1
   state: draft
 
 journal_entries_003:
@@ -104,6 +110,9 @@ journal_entries_003:
   created_at: 2009-07-19 19:13:59 +02:00
   created_on: 2009-07-19
   creator_id: 1
+  original_credit: 0
+  financial_year_id: 1
+  original_debit: 0
   credit: 0
   debit: 0
   id: 3
@@ -112,8 +121,8 @@ journal_entries_003:
   printed_on: 2007-05-19
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  currency_id: 1
-  currency_rate: 1
+  original_currency: 'EUR'
+  original_currency_rate: 1
   state: draft
 
 journal_entries_004:
@@ -123,13 +132,16 @@ journal_entries_004:
   creator_id: 1
   credit: 0
   debit: 0
+  original_credit: 0
+  original_debit: 0
+  financial_year_id: 1
   id: 4
   journal_id: 1
   number: "XYZ0004"
   printed_on: 2007-01-19
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
-  currency_id: 1
-  currency_rate: 1
+  original_currency: 'EUR'
+  original_currency_rate: 1
   state: draft
 
