--- a/test/fixtures/journal_entry_lines.yml
+++ b/test/fixtures/journal_entry_lines.yml
@@ -68,8 +68,8 @@ journal_entry_lines_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   credit: 0
-  currency_credit: 0
-  currency_debit: 0
+  original_credit: 0
+  original_debit: 0
   debit: 0
   id: 1
   journal_id: 1
@@ -85,8 +85,8 @@ journal_entry_lines_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   credit: 0
-  currency_credit: 0
-  currency_debit: 0
+  original_credit: 0
+  original_debit: 0
   debit: 0
   id: 2
   journal_id: 1
