--- a/test/fixtures/journals.yml
+++ b/test/fixtures/journals.yml
@@ -54,7 +54,7 @@ journals_001:
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  currency_id: 1
+  currency: 'EUR'
   id: 1
   name: "Xyz journal"
   nature: "various"
@@ -67,7 +67,7 @@ journals_002:
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
-  currency_id: 1
+  currency: 'EUR'
   id: 2
   name: "Abc journal"
   nature: "various"
