--- a/test/fixtures/outgoing_payments.yml
+++ b/test/fixtures/outgoing_payments.yml
@@ -66,6 +66,7 @@ outgoing_payments_001:
   creator_id: 1
   id: 1
   mode_id: 1
+  number: "OP001"
   used_amount: 0
   payee_id: 1
   responsible_id: 1
@@ -79,6 +80,7 @@ outgoing_payments_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
+  number: "OP002"
   mode_id: 1
   used_amount: 0
   payee_id: 1
