--- a/test/fixtures/prices.yml
+++ b/test/fixtures/prices.yml
@@ -69,7 +69,7 @@ prices_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 1
-  currency_id: 1
+  currency: 'EUR'
   product_id: 1
   quantity_max: 0
   quantity_min: 0
@@ -86,7 +86,7 @@ prices_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
-  currency_id: 1
+  currency: 'EUR'
   product_id: 1
   quantity_max: 0
   quantity_min: 0
