--- a/test/fixtures/purchase_natures.yml
+++ b/test/fixtures/purchase_natures.yml
@@ -22,7 +22,7 @@
 #
 #  active          :boolean          not null
 #  comment         :text             
-#  company_id      :integer          
+#  company_id      :integer          not null
 #  created_at      :datetime         not null
 #  creator_id      :integer          
 #  currency        :string(3)        
@@ -39,6 +39,7 @@
 #
 # purchase_natures_001:
 #   active: true
+#   company_id: 1
 #   created_at: 2009-07-19 19:13:59 +02:00
 #   creator_id: 1
 #   id: 1
@@ -46,13 +47,29 @@
 #   updater_id: 1
 #   with_accounting: true
 #
+ #
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+
+purchase_natures_001:
+  active: true
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  company_id: 1
+  currency: 'EUR'
+  id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  with_accounting: true
+  journal_id: 1
+
+purchase_natures_002:
+  active: true
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  company_id: 1
+  currency: 'EUR'
+  id: 2
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  with_accounting: true
+
