--- a/test/fixtures/sales.yml
+++ b/test/fixtures/sales.yml
@@ -98,7 +98,7 @@ sales_001:
   created_at: 2009-07-19 19:13:59 +02:00
   created_on: 2009-07-19
   creator_id: 1
-  currency_id: 1
+  currency: 'EUR'
   downpayment_amount: 0
   expiration_id: 1
   expired_on: 2009-07-19
@@ -190,7 +190,7 @@ sales_005:
   created_at: 2009-07-19 19:13:59 +02:00
   created_on: 2009-07-19
   creator_id: 1
-  currency_id: 1
+  currency: 'EUR'
   downpayment_amount: 0
   expiration_id: 1
   expired_on: 2009-07-19
