--- a/test/fixtures/companies.yml
+++ b/test/fixtures/companies.yml
@@ -51,11 +51,11 @@
 #
 
 companies_001:
-  code: ferstivall
+  code: myc
   entity_id: 1
   id: 1
   locked: false
-  name: Ferstivall LTD
+  name: My Company
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   updated_at: 2006-07-19 19:13:59 +02:00
