--- a/test/fixtures/sale_natures.yml
+++ b/test/fixtures/sale_natures.yml
@@ -65,6 +65,7 @@ sale_natures_001:
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: 'EUR'
   downpayment: true
   downpayment_minimum: 0
   downpayment_rate: 0
@@ -80,6 +81,7 @@ sale_natures_002:
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
+  currency: 'EUR'
   downpayment: true
   downpayment_minimum: 0
   downpayment_rate: 0
