--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,12 @@
 language: ruby
 rvm:
   - 1.8.7
+env:
+  - DB=mysql
+  - DB=postgresql
+  - DB=sqlite3
 before_install:
-  - gem install rails -v=2.3.14 --no-ri --no-rdoc
-  - rake gems:install --trace
+  - "gem install rails -v=2.3.14 --no-ri --no-rdoc"
+  - "rake gems:install --trace"
+  - "ci/setup"
+script: "rake test"
