Installs DB gem before "rake gems:install" in travis conf

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ env:
   - DB=sqlite3
 before_install:
   - "ci/setup"
+  - "gem install pg mysql sqlite3 --no-ri --no-rdoc"
   - "gem install rails -v=2.3.14 --no-ri --no-rdoc"
   - "rake gems:install --trace"
 script: "rake test"
