Adds new empty action for assets

--- a/config/menus.yml
+++ b/config/menus.yml
@@ -1,4 +1,7 @@
 # Unused actions in menus
+#         - "assets::cede"
+#         - "assets::depreciate"
+#         - "assets::sell"
 #         - "companies::register"
 #         - "dashboards::accountancy"
 #         - "dashboards::finances"
