--- a/test/fixtures/prices.yml
+++ b/test/fixtures/prices.yml
@@ -63,8 +63,9 @@
 #
 prices_001:
   active: true
-  amount: 0
-  pretax_amount: 0
+  amount: 119.60
+  pretax_amount: 100.00
+  category_id: 1
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
@@ -80,12 +81,31 @@ prices_001:
 
 prices_002:
   active: true
-  amount: 0
-  pretax_amount: 0
+  amount: 119.60
+  pretax_amount: 100.00
+  category_id: 1
   company_id: 1
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
+  currency: 'EUR'
+  product_id: 1
+  quantity_max: 0
+  quantity_min: 0
+  tax_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  use_range: false
+
+prices_003:
+  active: true
+  amount: 11.96
+  pretax_amount: 10
+  category_id: 1
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 3
   currency: 'EUR'
   product_id: 1
   quantity_max: 0
