--- a/test/fixtures/assets.yml
+++ b/test/fixtures/assets.yml
@@ -76,7 +76,7 @@ assets_001:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   currency: 'EUR'
-  deprecated_amount: 0
+  depreciated_amount: 0
   depreciable_amount: 150
   depreciation_method: "linear"
   id: 1
@@ -96,7 +96,7 @@ assets_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   currency: 'EUR'
-  deprecated_amount: 0
+  depreciated_amount: 0
   depreciable_amount: 0
   depreciation_method: "linear"
   id: 2
