--- a/test/fixtures/financial_years.yml
+++ b/test/fixtures/financial_years.yml
@@ -70,8 +70,21 @@ financial_years_002:
   created_at: 2009-07-19 19:13:59 +02:00
   creator_id: 1
   id: 2
-  started_on: 2000-01-01
-  stopped_on: 2000-12-31
+  started_on: 2008-01-01
+  stopped_on: 2008-12-31
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+
+financial_years_003:
+  closed: false
+  code: "Lorem2000"
+  currency: 'USD'
+  company_id: 2
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  id: 3
+  started_on: 1992-01-05
+  stopped_on: 1993-04-30
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
 
