--- a/test/fixtures/stocks.yml
+++ b/test/fixtures/stocks.yml
@@ -79,10 +79,26 @@ stocks_002:
   creator_id: 1
   critic_quantity_min: 0
   id: 2
-  product_id: 1
+  product_id: 2
   quantity: 0
   quantity_max: 0
   quantity_min: 0
+  unit_id: 1
+  updated_at: 2009-07-19 19:13:59 +02:00
+  updater_id: 1
+  virtual_quantity: 0
+  warehouse_id: 3
+
+stocks_003:
+  company_id: 1
+  created_at: 2009-07-19 19:13:59 +02:00
+  creator_id: 1
+  critic_quantity_min: 0
+  id: 3
+  product_id: 1
+  quantity: 15
+  quantity_max: 200
+  quantity_min: 4
   unit_id: 1
   updated_at: 2009-07-19 19:13:59 +02:00
   updater_id: 1
